# EffectsOfNetworkTopologyADMM-SVMs-code

./: .gitignore  CMakeLists.txt  MachineLearningPackage.sln  README.md
MachineLearningPackage/: MachineLearningPackage.vcxproj
internal/ADMM_SVM/: ADMM_SVM.vcxproj  ADMM_SVM.vcxproj.filters
internal/ADMM_SVM/src/: ADMM_penalty.cpp  ADMM_penalty.h  ChoosingT.cpp  ChoosingT.h  CrossValidation.cpp  CrossValidation.h  DistributedData.cpp  DistributedData.h  FileReader.cpp  FileReader.h  FindSVs.cpp  FindSVs.h  FoldData.cpp  FoldData.h  InverseOfMat.cpp  InverseOfMat.h  Kernel.cpp  Kernel.h  Main.cpp  MatrixVectorUtils.h  NetworkCreation.cpp  NetworkCreation.h  NodeSolver.cpp  NodeSolver.h  NodeSolver_linear.cpp  NodeSolver_linear.h  Partitioning.cpp  Partitioning.h  PrintData.h  Printer.cpp  Printer.h  ProblemSettings.cpp  ProblemSettings.h  Randomizing.cpp  Randomizing.h  ReadDataset.cpp  ReadDataset.h  Scaling.cpp  Scaling.h  SequencesOfTests - Copy.cpp__  (+13 more)
scripts/: BoxPlotConnectivityReg_VS_Mean.py  ConectivityPlot_Reg_Mean_Complete.py  PlotAverageResultForAllDegrees.py  PlotDiameters.py  PlotResultsFromOutputFiles.m  PlotResultsFromOutputFiles_allDatasetsinOnePlot.m
